// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`set_time_signature (Snapshot) writes a time change at the start of an empty range to all staves 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Part id="2">
      <Staff id="2">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        <defaultConcertClef>F8vb</defaultConcertClef>
        <defaultTransposingClef>F</defaultTransposingClef>
        </Staff>
      <trackName>Electric Bass</trackName>
      <Instrument id="electric-bass">
        <longName>Electric Bass</longName>
        <shortName>El. B.</shortName>
        <trackName>Electric Bass</trackName>
        <minPitchP>28</minPitchP>
        <maxPitchP>67</maxPitchP>
        <minPitchA>28</minPitchA>
        <maxPitchA>65</maxPitchA>
        <transposeDiatonic>-7</transposeDiatonic>
        <transposeChromatic>-12</transposeChromatic>
        <instrumentId>pluck.bass.electric</instrumentId>
        <concertClef>F8vb</concertClef>
        <transposingClef>F</transposingClef>
        <Channel>
          <program value="33"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          
          <Chord><durationType>whole</durationType><Note><pitch>60</pitch><tpc>14</tpc></Note></Chord></voice>
        </Measure>
      <Measure>
        <voice>
          
          <Chord><durationType>whole</durationType><Note><pitch>62</pitch><tpc>16</tpc></Note></Chord></voice>
        </Measure>
      <Measure>
        <voice><TimeSig><sigN>3</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    <Staff id="2">
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice><TimeSig><sigN>3</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`set_time_signature (Snapshot) stops the affected range at the next existing TimeSig 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice><TimeSig><sigN>3</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice><TimeSig><sigN>6</sigN><sigD>8</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          
          <Chord><dots>1</dots><durationType>quarter</durationType><Note><pitch>64</pitch><tpc>18</tpc></Note></Chord><Chord><dots>1</dots><durationType>quarter</durationType><Note><pitch>64</pitch><tpc>18</tpc></Note></Chord></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`set_time_signature (Snapshot) replaces an existing TimeSig at the same bar instead of duplicating 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice><TimeSig><sigN>6</sigN><sigD>8</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`set_time_signature (Snapshot) rewrites the duration of MuseScore-authored measure rests 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <programVersion>4.5.2</programVersion>
  <programRevision>ac9d3bc</programRevision>
  <Score>
    <eid>3pWwmiyQQ0C_GsW8qJtiJ6D</eid>
    <Division>480</Division>
    <showInvisible>1</showInvisible>
    <showUnprintable>1</showUnprintable>
    <showFrames>1</showFrames>
    <showMargins>0</showMargins>
    <open>1</open>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Composer / arranger</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="creationDate">2026-08-26</metaTag>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform">Apple Macintosh</metaTag>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle">Subtitle</metaTag>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Untitled score</metaTag>
    <Order id="orchestral">
      <name>Orchestral</name>
      <instrument id="piano">
        <family id="keyboards">Keyboards</family>
        </instrument>
      <section id="woodwind" brackets="true" barLineSpan="true" thinBrackets="true">
        <family>flutes</family>
        <family>oboes</family>
        <family>clarinets</family>
        <family>saxophones</family>
        <family>bassoons</family>
        <unsorted group="woodwinds"/>
        </section>
      <section id="brass" brackets="true" barLineSpan="true" thinBrackets="true">
        <family>horns</family>
        <family>trumpets</family>
        <family>cornets</family>
        <family>flugelhorns</family>
        <family>trombones</family>
        <family>tubas</family>
        </section>
      <section id="timpani" brackets="true" barLineSpan="true" thinBrackets="true">
        <family>timpani</family>
        </section>
      <section id="percussion" brackets="true" barLineSpan="true" thinBrackets="true">
        <family>keyboard-percussion</family>
        <family>drums</family>
        <family>unpitched-metal-percussion</family>
        <family>unpitched-wooden-percussion</family>
        <family>other-percussion</family>
        </section>
      <family>keyboards</family>
      <family>harps</family>
      <family>organs</family>
      <family>synths</family>
      <soloists/>
      <section id="voices" brackets="true" barLineSpan="false" thinBrackets="true">
        <family>voices</family>
        <family>voice-groups</family>
        </section>
      <section id="strings" brackets="true" barLineSpan="true" thinBrackets="true">
        <family>orchestral-strings</family>
        </section>
      <unsorted/>
      </Order>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        <bracket type="1" span="2" col="2" visible="1"/>
        <barLineSpan>1</barLineSpan>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <clef staff="2">F</clef>
        <Articulation>
          <velocity>100</velocity>
          <gateTime>95</gateTime>
          </Articulation>
        <Articulation name="staccatissimo">
          <velocity>100</velocity>
          <gateTime>33</gateTime>
          </Articulation>
        <Articulation name="staccato">
          <velocity>100</velocity>
          <gateTime>50</gateTime>
          </Articulation>
        <Articulation name="portato">
          <velocity>100</velocity>
          <gateTime>67</gateTime>
          </Articulation>
        <Articulation name="tenuto">
          <velocity>100</velocity>
          <gateTime>100</gateTime>
          </Articulation>
        <Articulation name="marcato">
          <velocity>120</velocity>
          <gateTime>67</gateTime>
          </Articulation>
        <Articulation name="sforzato">
          <velocity>150</velocity>
          <gateTime>100</gateTime>
          </Articulation>
        <Articulation name="sforzatoStaccato">
          <velocity>150</velocity>
          <gateTime>50</gateTime>
          </Articulation>
        <Articulation name="marcatoStaccato">
          <velocity>120</velocity>
          <gateTime>50</gateTime>
          </Articulation>
        <Articulation name="marcatoTenuto">
          <velocity>120</velocity>
          <gateTime>100</gateTime>
          </Articulation>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <Measure>
        <eid>lDXC1KNDwKO_29I/CdUy2oL</eid>
        <voice>
          <KeySig>
            <eid>lULoRUFX5B_5HNcwQ40w9M</eid>
            <concertKey>0</concertKey>
            </KeySig>
          <TimeSig>
            <eid>xMLeI+QuyMF_ZRdYTcczWDO</eid>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>1.333333</tempo>
            <followText>1</followText>
            <eid>RSM2xKMXnVO_u64L9j44ImD</eid>
            <text><sym>metNoteQuarterUp</sym><font face="Edwin"/> = 80</text>
            </Tempo>
          <Rest>
            <eid>EHb+fQPJ0sG_zZEhy3oqwZI</eid>
            <durationType>measure</durationType>
            <duration>4/4</duration>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <eid>Il48VAL5WzE_NZOo2No7rEG</eid>
        <voice>
          <KeySig>
            <eid>jsmrh6huoVE_3Z+FAnT0mCJ</eid>
            <concertKey>2</concertKey>
            </KeySig>
          <TimeSig>
            <eid>PbbYaxoLbcI_3h+M6QvZOyG</eid>
            <sigN>3</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>3</tempo>
            <followText>1</followText>
            <eid>3XfCV7nS/JE_02UU03tS8BC</eid>
            <text><sym>metNoteQuarterUp</sym><font face="Edwin"/> = 180</text>
            </Tempo>
          <Rest>
            <eid>fN7AFuVGGtO_mUudqQcNnGK</eid>
            <durationType>measure</durationType>
            <duration>3/4</duration>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <eid>GGhboosZMYO_oxdSEFK0WwJ</eid>
        <voice>
          <KeySig>
            <eid>oRO9ObMMYO_4vOxvzEmLIP</eid>
            <concertKey>4</concertKey>
            </KeySig>
          <TimeSig>
            <eid>/d050g1fqgG_KEcU5KvpuzD</eid>
            <sigN>9</sigN>
            <sigD>8</sigD>
            </TimeSig>
          <Rest>
            <eid>BHzEFj04BmE_euMY/Mj7L+C</eid>
            <durationType>quarter</durationType>
            </Rest>
          <Tempo>
            <tempo>2</tempo>
            <followText>1</followText>
            <eid>UOy4eUAx8NN_ckt/o96uIsJ</eid>
            <text><sym>metNoteQuarterUp</sym><font face="Edwin"/> = 120</text>
            </Tempo>
          <Rest>
            <eid>wqvvlobnNGI_SLJUlHnqp8G</eid>
            <durationType>half</durationType>
            </Rest>
          <Rest>
            <eid>4nJsYrn+8TE_s0arBaEDKLC</eid>
            <durationType>quarter</durationType>
            </Rest>
          <Rest>
            <eid>nZ0LAjUdAzO_9htakuT6z4E</eid>
            <durationType>eighth</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <eid>jwBeT17JXkO_lD5Th4Pxeb</eid>
        <voice>
          <TimeSig>
            <eid>nBhFrHoxsmG_UzLxgNbIMEJ</eid>
            <sigN>5</sigN>
            <sigD>8</sigD>
            </TimeSig>
          <Rest>
            <eid>DdB3cCj99SC_GXLWR+pQzjE</eid>
            <durationType>measure</durationType>
            <duration>5/8</duration>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <eid>2oWQg1vnqlF_HFTKMyZ9p3B</eid>
        <voice>
          <TimeSig>
            <eid>hlLi6l6ja+G_qj3ZDewRO1</eid>
            <sigN>7</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Rest>
            <eid>WriP6exYEXO_8cBnQIlLBKK</eid>
            <durationType>measure</durationType>
            <duration>7/4</duration>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <eid>0XpVQUPvSRK_zoTGiiHNuuM</eid>
        <voice><TimeSig><sigN>3</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <eid>l2r5bQkQc6I_bzih306b4+K</eid>
            <durationType>measure</durationType>
            <duration>3/4</duration>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <eid>75qk8pP2QdP_I8HKmZ0iK6K</eid>
        <voice>
          <Rest>
            <eid>6PIT/MqtpCI_MbFDGmYvVqG</eid>
            <durationType>measure</durationType>
            <duration>3/4</duration>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;
